Fixed z-index of scrolling buttons

--- a/css/custom.css
+++ b/css/custom.css
@@ -489,6 +489,7 @@ i.scroll-prev {
   top: 50%;
   font-size: 100px;
   left: 0;
+  z-index: 2;
 }
 
 i.scroll-next {
@@ -496,6 +497,7 @@ i.scroll-next {
   top: 50%;
   font-size: 100px;
   right: 0;
+  z-index: 2;
 }
 
 .download{
